--- a/masters/BigDataAnalytics/Lab/eda2/EDA2_S.ipynb
+++ b/masters/BigDataAnalytics/Lab/eda2/EDA2_S.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -15,16 +15,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: pip in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (24.3.1)\n",
-            "Collecting pip\n",
-            "  Using cached pip-25.0.1-py3-none-any.whl.metadata (3.7 kB)\n",
-            "Using cached pip-25.0.1-py3-none-any.whl (1.8 MB)\n",
-            "Installing collected packages: pip\n",
-            "  Attempting uninstall: pip\n",
-            "    Found existing installation: pip 24.3.1\n",
-            "    Uninstalling pip-24.3.1:\n",
-            "      Successfully uninstalled pip-24.3.1\n",
-            "Successfully installed pip-25.0.1\n",
+            "Requirement already satisfied: pip in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (25.0.1)\n",
             "Requirement already satisfied: scipy in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (1.15.2)\n",
             "Requirement already satisfied: numpy<2.5,>=1.23.5 in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from scipy) (2.2.3)\n"
           ]
@@ -57,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,6 +97,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Calcolo dissimilarità tra attributi nominali:\n",
+        "\n",
+        "$$\n",
+        "d(i,j) = \\frac{p-m}{p}\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "$$\n",
+        "\\text{dove } m=\\sum_{l=1}^{p} \\delta_{i_lj_l} \\space\\space\\text{  e con: } \\space\\space\\delta_{i_lj_l}=1 \\space\\text{se}\\space i_l=j_l \\space\\space\\text{o 0 altrimenti}\n",
+        "$$"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
@@ -131,10 +138,16 @@
         "## nominal attributes\n",
         "def nominal_distance(x, y):\n",
         "    p = len(x)\n",
+        "    # zip creates an iterable of tuples where elements from \n",
+        "    # the fist array are compared with the equivalent elements of the \n",
+        "    # second array \n",
         "    m = sum(1 if a == b else 0 for a, b in zip(x, y))\n",
         "    return float(p - m) / p\n",
         "\n",
-        "nominal_distance(['green','blue','yellow'], ['red', 'blue', 'yellow'])"
+        "\n",
+        "x = ['green','blue','yellow']\n",
+        "y = ['red', 'blue', 'yellow']\n",
+        "nominal_distance(x, y)"
       ]
     },
     {
@@ -147,8 +160,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Dissimilarità per attributi binari simmetrici (0 e 1 ugualmente importanti):\n",
+        "\n",
+        "| $i/j$ | 1 | 0 |\n",
+        "|---|---|---|\n",
+        "| 1    |  $q$   | $r$    |\n",
+        "| 0    |  $s$   | $t$    |\n",
+        "\n",
+        "- $q$ attributi con 1 in entrambi gli oggetti \n",
+        "- $r$ attributi con 1 nel primo oggetto e 0 nel secondo\n",
+        "- $s$ attributi con 0 nel primo oggetto e 1 nel secondo \n",
+        "- $t$ attributi con 0 in entrambi\n",
+        "\n",
+        "$$\n",
+        "d(i,j) = \\frac{r+s}{q+r+s+t}\n",
+        "$$  \n",
+        "\n",
+        "Dissimilarità per attributi binari assimetrici:  \n",
+        "\n",
+        "**Coefficiente di Jaccard:**  \n",
+        "\n",
+        "$$\n",
+        "J(i,j) = 1-d(i,j)= \\frac{q}{q+r+s}\n",
+        "$$\n"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -161,8 +203,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.2857142857142857\n",
-            "0.5\n"
+            "Symmetric binary distance: 0.2857142857142857\n",
+            "Asymmetric binary distance using Jaccard: 0.5\n"
           ]
         }
       ],
@@ -183,23 +225,23 @@
         "        float: The symmetric binary distance.\n",
         "    \"\"\"\n",
         "    # Compute the contingency table\n",
-        "    ct = [[0, 0], [0, 0]]\n",
+        "    contingency_table = [[0, 0], [0, 0]]\n",
         "    for a, b in zip(arr1, arr2):\n",
-        "        ct[a][b] += 1\n",
+        "        contingency_table[a][b] += 1\n",
         "\n",
         "    # Compute the symmetric binary distance\n",
-        "    numerator = ct[0][1] + ct[1][0]\n",
-        "    denominator = sum(sum(row) for row in ct)\n",
+        "    numerator = contingency_table[0][1] + contingency_table[1][0]\n",
+        "    denominator = sum(sum(row) for row in contingency_table)\n",
         "    distance = numerator / denominator\n",
         "\n",
         "    return distance\n",
         "\n",
         "#symmetric binary distance\n",
-        "print(symmetric_binary_distance(v1,v2))\n",
+        "print(f'Symmetric binary distance: {symmetric_binary_distance(v1,v2)}')\n",
         "\n",
         "#asymmetric binary distance\n",
         "from scipy.spatial.distance import jaccard\n",
-        "print(jaccard(v1,v2))"
+        "print(f'Asymmetric binary distance using Jaccard: {jaccard(v1,v2)}')\n"
       ]
     },
     {
@@ -213,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "mvElQi33crFJ"
       },
@@ -236,10 +278,13 @@
         "    df_copy = df.copy()\n",
         "\n",
         "    # Map ordinal string values to numerical ordered values for each column\n",
+        "    # .items() returns dictionary values as key:value\n",
         "    for col, mapping in mappings.items():\n",
         "        if col in df_copy.columns:\n",
+        "            # passing a dict to map is allowed and automatically swaps the values \n",
+        "            # in the columns with the corresponding dict values \n",
         "            df_copy[col] = pd.to_numeric(df_copy[col].map(mapping))\n",
-        "            # Rescale the numerical values between 0 and 1\n",
+        "            # Rescale the numerical values between 0 and 1 - normalization\n",
         "            num_values = len(mapping)\n",
         "            df_copy[col] = df_copy[col] / (num_values - 1)  # Rescale between 0 and 1\n",
         "\n",
@@ -248,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -328,7 +373,7 @@
               "4      Medium   Medium  Medium"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -349,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -429,14 +474,12 @@
               "4          0.5       0.5  0.666667"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "\n",
-        "\n",
         "### Define the maps to be used in string to rank transition\n",
         "map_3={'Low':0,\n",
         "        'Medium':1,\n",
@@ -458,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -473,7 +516,7 @@
               "0.8333333333333334"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -482,7 +525,9 @@
         "from scipy.spatial.distance import euclidean\n",
         "## to compute dissimilarity between, e.g., record 0 and 3, we can now\n",
         "## use the distance measures defined for purely numerical attributes\n",
-        "euclidean(numeric_df.loc[0,:].values, numeric_df.loc[3,:].values)"
+        "euclidean(numeric_df.loc[0,:].values, numeric_df.loc[3,:].values)\n",
+        "\n",
+        "#numeric_df.loc[1,:].values"
       ]
     },
     {
@@ -584,12 +629,25 @@
         "id": "1p4BnHK3D0tL"
       },
       "source": [
-        "### KL-divergence"
+        "### KL-divergence\n",
+        "\n",
+        "La KL Divergence $D_{KL}(p \\| q)$ misura quanto $q(x)$ **è sbagliata rispetto a** $p(x)$\n",
+        "\n",
+        "\n",
+        "\n",
+        "$$\n",
+        "\\text{Caso discreto:}\\space\\space\\space\\space\\space D_{KL}(p \\| q) = \\sum_{x \\in X} p(x) \\ln\\left(\\frac{p(x)}{q(x)}\\right)  \n",
+        "$$\n",
+        "\n",
+        "\n",
+        "$$\n",
+        "\\text{Caso continuo:}\\space\\space\\space\\space\\space D_{KL}(p \\| q) = \\int_{-\\infty}^{\\infty} p(x) \\ln\\left(\\frac{p(x)}{q(x)}\\right) dx  \n",
+        "$$\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -606,7 +664,8 @@
             "KL-divergence(box_2 || box_1): 0.056 \n",
             "KL-divergence(box_1 || box_1): 0.000 \n",
             "KL-divergence(box_1 || box_3): inf \n",
-            "KL-divergence(box_3 || box_1): 0.289 \n"
+            "KL-divergence(box_3 || box_1): 0.289 \n",
+            "relative entropy: [ 0.04358835  0.14915509 -0.07595559 -0.05959494]\n"
           ]
         }
       ],
@@ -622,13 +681,14 @@
         "import numpy as np\n",
         "from scipy.special import rel_entr\n",
         "\n",
-        "\n",
+        "# Note that is necessary to add the sum() operator on the values returned by the rel_entr\n",
+        "# this gives the KL-Divergence (as seen on the formula above).  \n",
         "print('KL-divergence(box_1 || box_2): %.3f ' % sum(rel_entr(box_1,box_2)))\n",
         "print('KL-divergence(box_2 || box_1): %.3f ' % sum(rel_entr(box_2,box_1)))\n",
         "print('KL-divergence(box_1 || box_1): %.3f ' % sum(rel_entr(box_1,box_1)))\n",
         "\n",
         "print('KL-divergence(box_1 || box_3): %.3f ' % sum(rel_entr(box_1,box_3)))\n",
-        "print('KL-divergence(box_3 || box_1): %.3f ' % sum(rel_entr(box_3,box_1)))"
+        "print('KL-divergence(box_3 || box_1): %.3f ' % sum(rel_entr(box_3,box_1)))\n"
       ]
     },
     {
@@ -664,6 +724,7 @@
         "print('JS-divergence(box_2 || box_1): %.3f ' % distance.jensenshannon(box_2,box_1))\n",
         "print('JS-divergence(box_1 || box_1): %.3f ' % distance.jensenshannon(box_1,box_1))\n",
         "\n",
+        "print('Simmetry between order of distributions: (p||q) == (q||p):')\n",
         "print('JS-divergence(box_1 || box_3): %.3f ' % distance.jensenshannon(box_1,box_3))\n",
         "print('JS-divergence(box_3 || box_1): %.3f ' % distance.jensenshannon(box_3,box_1))"
       ]
