--- a/masters/BigDataAnalytics/Lab/eda2/EDA2_S.ipynb
+++ b/masters/BigDataAnalytics/Lab/eda2/EDA2_S.ipynb
@@ -1,32 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RPcXKgZjRsKd",
-        "outputId": "653c2061-cc51-4982-d53b-1092d4578d4a"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: pip in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (25.0.1)\n",
-            "Requirement already satisfied: scipy in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (1.15.2)\n",
-            "Requirement already satisfied: numpy<2.5,>=1.23.5 in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from scipy) (2.2.3)\n"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install --upgrade pip\n",
-        "!pip install --upgrade scipy"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "P35xMkw5Vzwb"
@@ -114,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -129,7 +103,7 @@
               "0.3333333333333333"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -140,7 +114,9 @@
         "    p = len(x)\n",
         "    # zip creates an iterable of tuples where elements from \n",
         "    # the fist array are compared with the equivalent elements of the \n",
-        "    # second array \n",
+        "    # second array:\n",
+        "    # x = ['green','blue', 'yellow'] y = ['red','blue','yellow']\n",
+        "    # zip(x,y) = ('green', 'red'); ('blue', 'blue'), ('yellow', 'yellow')\n",
         "    m = sum(1 if a == b else 0 for a, b in zip(x, y))\n",
         "    return float(p - m) / p\n",
         "\n",
@@ -501,7 +477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -516,7 +492,7 @@
               "0.8333333333333334"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -647,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -664,8 +640,7 @@
             "KL-divergence(box_2 || box_1): 0.056 \n",
             "KL-divergence(box_1 || box_1): 0.000 \n",
             "KL-divergence(box_1 || box_3): inf \n",
-            "KL-divergence(box_3 || box_1): 0.289 \n",
-            "relative entropy: [ 0.04358835  0.14915509 -0.07595559 -0.05959494]\n"
+            "KL-divergence(box_3 || box_1): 0.289 \n"
           ]
         }
       ],
@@ -687,6 +662,7 @@
         "print('KL-divergence(box_2 || box_1): %.3f ' % sum(rel_entr(box_2,box_1)))\n",
         "print('KL-divergence(box_1 || box_1): %.3f ' % sum(rel_entr(box_1,box_1)))\n",
         "\n",
+        "# Notice that KL-divergence is asymmetric: KL(q||p) != KL(p||q)\n",
         "print('KL-divergence(box_1 || box_3): %.3f ' % sum(rel_entr(box_1,box_3)))\n",
         "print('KL-divergence(box_3 || box_1): %.3f ' % sum(rel_entr(box_3,box_1)))\n"
       ]
@@ -700,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -710,6 +686,8 @@
             "JS-divergence(box_1 || box_2): 0.118 \n",
             "JS-divergence(box_2 || box_1): 0.118 \n",
             "JS-divergence(box_1 || box_1): 0.000 \n",
+            "\n",
+            "Simmetry between order of distributions: JS(p||q) == JS(q||p):\n",
             "JS-divergence(box_1 || box_3): 0.309 \n",
             "JS-divergence(box_3 || box_1): 0.309 \n"
           ]
@@ -717,14 +695,14 @@
       ],
       "source": [
         "# we consider the same setting but compute the Jansen-Shannon divergence between distributions\n",
-        "\n",
+        "# JS is bound [0,ln2] \n",
         "from scipy.spatial import distance\n",
         "\n",
         "print('JS-divergence(box_1 || box_2): %.3f ' % distance.jensenshannon(box_1,box_2))\n",
         "print('JS-divergence(box_2 || box_1): %.3f ' % distance.jensenshannon(box_2,box_1))\n",
         "print('JS-divergence(box_1 || box_1): %.3f ' % distance.jensenshannon(box_1,box_1))\n",
         "\n",
-        "print('Simmetry between order of distributions: (p||q) == (q||p):')\n",
+        "print('\\nSimmetry between order of distributions: JS(p||q) == JS(q||p):')\n",
         "print('JS-divergence(box_1 || box_3): %.3f ' % distance.jensenshannon(box_1,box_3))\n",
         "print('JS-divergence(box_3 || box_1): %.3f ' % distance.jensenshannon(box_3,box_1))"
       ]
@@ -747,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -762,20 +740,24 @@
               "np.float64(0.5000000000000001)"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# suppose we have a discrete random variable can take values 1,2,3\n",
+        "# suppose we have a discrete random variable that can take values 1,2,3\n",
         "# and we have two discrete distributions\n",
         "p1=[0.1,0.3,0.6] #p1(1),p1(2),p1(3)\n",
         "p2=[0.4,0.2,0.4] #p2(1),p2(2),p2(3)\n",
-        "# the wasserstein distance can be computed as\n",
         "\n",
+        "# support values of the distribution are needed when computing wasserstein between\n",
+        "# distributions - not needed if compraing raw data\n",
+        "support_values = [1,2,3]\n",
+        "\n",
+        "# the wasserstein distance can be computed as\n",
         "from scipy.stats import wasserstein_distance\n",
-        "wasserstein_distance(np.arange(3), np.arange(3), p1,p2)"
+        "wasserstein_distance(support_values,support_values, p1,p2)"
       ]
     },
     {
@@ -831,11 +813,11 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Parameters of two normal distributions\n",
+        "# media e deviazione standard di p e q \n",
         "mean_p, std_p = 0, 1\n",
         "mean_q, std_q = 2, 1\n",
         "\n",
-        "# Generate random samples from the two normal distributions\n",
+        "# Genera 1000 punti dalle due distribuzioni - campioni \n",
         "samples_p = np.random.normal(mean_p, std_p, size=1000)\n",
         "samples_q = np.random.normal(mean_q, std_q, size=1000)\n",
         "\n",
