--- a/masters/BigDataAnalytics/Lab/eda3/EDA3_S.ipynb
+++ b/masters/BigDataAnalytics/Lab/eda3/EDA3_S.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2314,7 +2314,7 @@
    ]
   },
   "kernelspec": {
-   "display_name": "PACS",
+   "display_name": "Notes-5FvvYq58",
    "language": "python",
    "name": "python3"
   },
@@ -2328,7 +2328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
