--- a/masters/BigDataAnalytics/Lab/eda/EDA1_S.ipynb
+++ b/masters/BigDataAnalytics/Lab/eda/EDA1_S.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -156,29 +156,7 @@
     "id": "aFxOOtU4ewXt",
     "outputId": "8465c2bd-4d04-47da-8c03-0b6eb5741c72"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: kaggle in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (1.7.4)\n",
-      "Requirement already satisfied: bleach in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (6.2.0)\n",
-      "Requirement already satisfied: certifi>=14.05.14 in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (2025.1.31)\n",
-      "Requirement already satisfied: charset-normalizer in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (3.4.1)\n",
-      "Requirement already satisfied: idna in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (3.10)\n",
-      "Requirement already satisfied: protobuf in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (6.30.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.3 in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (2.9.0.post0)\n",
-      "Requirement already satisfied: python-slugify in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (8.0.4)\n",
-      "Requirement already satisfied: requests in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (2.32.3)\n",
-      "Requirement already satisfied: setuptools>=21.0.0 in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (76.0.0)\n",
-      "Requirement already satisfied: six>=1.10 in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (1.17.0)\n",
-      "Requirement already satisfied: text-unidecode in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (1.3)\n",
-      "Requirement already satisfied: tqdm in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (4.67.1)\n",
-      "Requirement already satisfied: urllib3>=1.15.1 in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (2.3.0)\n",
-      "Requirement already satisfied: webencodings in /Users/chris/.local/share/virtualenvs/Lab-YkoVauK0/lib/python3.13/site-packages (from kaggle) (0.5.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install kaggle"
    ]
@@ -671,6 +649,42 @@
     "\n",
     "df=pd.read_csv('/Users/chris/Notes/masters/BigDataAnalytics/Lab/eda/train.csv')\n",
     "df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          714 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Cabin        204 non-null    object \n",
+      " 11  Embarked     889 non-null    object \n",
+      " 12  Children     891 non-null    int64  \n",
+      "dtypes: float64(2), int64(6), object(5)\n",
+      "memory usage: 90.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
