--- a/masters/SWdesign/Teoria/1.ModelsMethodologies.md
+++ b/masters/SWdesign/Teoria/1.ModelsMethodologies.md
@@ -201,7 +201,7 @@ Il modello UP è composto da **cicli e fasi**, dove ogni ciclo è composto da 4 
 </center>
 
 
-Il modello UP ha dato le fondamenta per lo sviluppo delle metodologie agili e la loro accettazioen nei contesti industriali.  
+Il modello UP ha dato le fondamenta per lo sviluppo delle metodologie agili e la loro accettazione nei contesti industriali.  
 
 
 
