--- a/masters/BigDataAnalytics/Lab/eda4/EDA4_example.ipynb
+++ b/masters/BigDataAnalytics/Lab/eda4/EDA4_example.ipynb
@@ -124,6 +124,36 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0        2008-03-16\n",
+              "1        2008-03-16\n",
+              "2        2008-03-16\n",
+              "3        2008-03-16\n",
+              "4        2008-03-16\n",
+              "            ...    \n",
+              "26754    2024-12-08\n",
+              "26755    2024-12-08\n",
+              "26756    2024-12-08\n",
+              "26757    2024-12-08\n",
+              "26758    2024-12-08\n",
+              "Name: date, Length: 26759, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "df['date']"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 4,
       "metadata": {
         "colab": {
