--- a/masters/BigDataAnalytics/Lab/eda4/EDA4_example.ipynb
+++ b/masters/BigDataAnalytics/Lab/eda4/EDA4_example.ipynb
@@ -1196,10 +1196,7 @@
         "\n",
         "transformed_real_cov.hist(bins=15)\n",
         "plt.tight_layout()\n",
-        "plt.show()\n",
-        "\n",
-        "\n",
-        "\n"
+        "plt.show()"
       ]
     },
     {
@@ -1340,8 +1337,7 @@
         "plt.yscale('log')\n",
         "plt.xlabel('price')\n",
         "plt.ylabel('mpg')\n",
-        "plt.show()\n",
-        "\n"
+        "plt.show()"
       ]
     },
     {
