time series assignment

--- a/masters/BigDataAnalytics/Lab/AssignmentEDA/assignment_da.ipynb
+++ b/masters/BigDataAnalytics/Lab/AssignmentEDA/assignment_da.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Progetto su Time Series\n",
+    "A cura di:\n",
+    "- Marco Michellini 207429\n",
+    "- Matteo Battilori 207260\n",
+    "- Christian von Waldorff 208420"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
