--- a/masters/MobileProgramming/2. RMA.md
+++ b/masters/MobileProgramming/2. RMA.md
@@ -60,3 +60,21 @@ Il window manager è l'amministratore dello schermo, bisogna pensare allo scherm
 Gestisce i livelli di profondità: Ogni elemento visuale è una finesta su un 'foglio' separato, il windoww manager sa che ordine devono essere impilati questi fogli.  
 Se sono in un app e mi arriva una notifica il window manager disegna il foglio della notifica sopra quello dell'app che sto utilizzando.  
 
+
+### 4. Connectivity Manager: 
+
+Questo manager è il sensore dello stato della rete del dispositivo, ci permette di: 
+- Conoscere lo stato attuale (capire se siamo connessi o meno)
+- Essere notificati dei cambiamenti di rete: capire se siamo collegati a WiFi o 4G/3G/... (metered) e 'abbonarci' al manager ci permette di essere notificati se lo stato di rete cambia (es: se da WiFi passiamo a 3G allora la nostra app potrebbe avere della logica che previene il download di file pesanti).  
+
+### 5. Content Provider  
+
+Funge da interfaccia standardizzata per esporre o accedere ai dati delle app $\rightarrow$ permette a un app di esporre i propri dati ad **altre** applicazioni in modo sicuro.  
+
+Un app che vuole condividere i propri dati crea un `ContentProvider` che le altre app useranno come API per accedere ai dati che stiamo espondendo. Le altre app non accedono mai direttamente al database della nostra app, fanno invece richieste al `ContentProvider` che abbiamo creato attraverso metodi standard (query, insert, delete, ...).  
+_nota_: Sotto il cofano la comunicazione tra app e content provider avviene tramite il meccanismo di Binder IPC (inter process communication) - il content provider è un astrazione di alto livello.  
+
+
+Ci sono molti altri Manager, come il Resource Manager (gestisce accesso alle risorse dell'app che non sono codice) e il Location Manager (gestisce GPS).  
+In breve i manager sono tutti una misura di sicurezza per una determinata risorsa, controllano l'accesso in quanto per ottenere determinati dati bisogna interfacciarsi con loro ed ottenere un permesso specifico.  
+
